# kana_practice

./: .gitignore  concat-js-with-path.sh  index.html  pyproject.toml
.github/workflows/: deploy.yml
assets/json/: dict_n5.json  dictation.json  labels.json
assets/models/handwriting/: hiragana.onnx
css/: style.css
js/: app.js  routes.js
js/core/: Router.js
js/models/: Kana.js  Level.js  Question.js  Word.js
js/repositories/: DictionaryRepository.js  KanaRepository.js  QuestionRepository.js  RoadmapRepository.js
js/services/: AudioRecorder.js  AudioService.js  DrawingService.js  InputService.js  TTSAudioService.js  TokenizerService.js
js/services/ai/: HandwritingService.js  InferenceService.js
js/viewmodels/: DictationViewModel.js  DictionaryViewModel.js  KanaViewModel.js  KanaWritingViewModel.js  MainViewModel.js  RoadmapViewModel.js
js/views/: DictationView.js  DictionaryView.js  HomeView.js  KanaView.js  KanaWritingView.js  RoadmapView.js
onnx_model/: hiragana.onnx
