[project]
name = "kana"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "tensorflowjs>=4.22.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
